# RAG_fastapi

./: .env.example  .gitignore  OpenAI_PCCC_Agent.ipynb  README.md  api.py  pyproject.toml  request.py  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/routes/: health.py  qa.py
app/generation/: graph.py  llm.py  prompts.py
app/ingestion/: pipeline.py
app/ingestion/chunking/: base.py  hierarchical.py
app/ingestion/parsers/: base.py  pymupdf_md.py
app/retrieval/: embedder.py  reranker.py  retriever.py
app/retrieval/vector_store/: base.py  qdrant.py
app/schemas/: chunks.py  requests.py  responses.py
scripts/: ingest.py
tests/: test_chunking.py  test_qa_route.py  test_retrieval.py
